TFP-5430: Dokumenter og formatert beskrivelse (#7201)
* Sender med dokumentene for VUR_DOKUMENT
* Formaterer beskrivelse basert på formatet fra gosys